# LLVM-openmp

./: CMakeLists.txt  dothis.sh
offload/: Makefile
offload/src/: offload_engine.h  offload_host.cpp  offload_host.h  ompt_host.cpp  ompt_host.h  ompt_target.cpp
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  exports_so.txt  kmp.h  kmp_barrier.cpp  kmp_csupport.c  kmp_gsupport.c  kmp_runtime.c  kmp_wait_release.h  ompt-event-specific.h  ompt-general.c  ompt-internal.h  ompt-specific.c  ompt-specific.h  ompt-target-specific.h
runtime/src/include/30/: ompt.h.var
runtime/src/include/40/: ompt.h.var
runtime/src/include/41/: ompt.h.var
